--- a/package.json
+++ b/package.json
@@ -10,12 +10,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.48.1",
+    "chart.js": "^4.4.8",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
-    "styled-components": "^6.1.15"
+    "react-icons": "^5.4.0",
+    "react-router-dom": "^7.2.0",
+    "styled-components": "^6.1.15",
+    "supabase": "^2.12.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
+    "@svgr/webpack": "^8.1.0",
     "@types/estree": "^1.0.6",
     "@types/json-schema": "^7.0.15",
     "@types/react": "^19.0.10",
